--- a/package.json
+++ b/package.json
@@ -4,34 +4,72 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "build": "gatsby build --prefix-paths",
-    "serve": "gatsby serve"
+    "develop": "lerna bootstrap && (npm run serve-lambda & gatsby develop)",
+    "start": "lerna bootstrap && npm run develop",
+    "build": "lerna bootstrap && npm run build-stackbit && npm run build-lambda",
+    "serve-lambda": "netlify-lambda serve lambda -c ./webpack.functions.js",
+    "build-lambda": "netlify-lambda build lambda -c ./webpack.functions.js",
+    "build-stackbit": "./stackbit-build.sh",
+    "serve": "lerna bootstrap && gatsby serve",
+    "postinstall": "netlify-lambda install"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@babel/plugin-transform-react-jsx-source": "^7.9.0",
+    "@mdx-js/mdx": "^1.5.9",
+    "@mdx-js/react": "^1.5.9",
+    "@octokit/core": "^3.2.4",
     "@stackbit/gatsby-plugin-menus": "0.0.4",
-    "chokidar": "^3.4.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.3.2",
+    "@xobotyi/scrollbar-width": "^1.9.5",
+    "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
+    "country-code-lookup": "0.0.16",
+    "date-fns": "^2.13.0",
+    "debounce-promise": "^3.1.2",
+    "dotenv-flow": "^3.1.0",
+    "dotenv-flow-webpack": "^1.0.0",
     "fs-extra": "^7.0.1",
-    "gatsby": "2.22.17",
+    "gatsby": "^2.20.23",
+    "gatsby-cli": "^2.11.5",
+    "gatsby-plugin-mdx": "^1.1.11",
+    "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-source-filesystem": "2.3.10",
-    "gatsby-transformer-remark": "2.8.14",
-    "js-yaml": "^3.12.2",
-    "lodash": "^4.17.11",
-    "marked": "^0.6.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "2.3.8",
+    "js-yaml": "^3.13.1",
+    "lerna": "^3.20.2",
+    "lodash": "^4.17.15",
+    "marked": "^0.8.2",
     "moment": "^2.23.0",
     "moment-strftime": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "netlify-lambda": "^1.6.3",
+    "node-sass": "^4.13.1",
     "node-sass-utils": "^1.1.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-hook-form": "^5.6.3",
     "react-html-parser": "^2.0.2",
+    "react-jotform-embed": "^1.0.4",
+    "react-query": "^1.5.7",
     "react-script-tag": "^1.1.2",
+    "react-select": "^3.0.8",
+    "react-use": "^14.1.1",
     "rehype-react": "^3.0.2",
-    "sprintf-js": "^1.1.2"
+    "save-dev": "0.0.1-security",
+    "sprintf-js": "^1.1.2",
+    "stripe": "^8.29.0",
+    "us-state-codes": "^1.1.2"
+  },
+  "devDependencies": {
+    "@sendgrid/mail": "^7.1.1",
+    "faunadb": "^2.14.2",
+    "frisbee": "^3.1.3",
+    "http-proxy-middleware": "^1.0.4",
+    "node-fetch": "^2.6.0",
+    "opencorporates": "^3.0.3",
+    "unfetch": "^4.1.0"
   }
 }
