--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.5.9",
     "@octokit/core": "^3.2.4",
     "@stackbit/gatsby-plugin-menus": "0.0.4",
+    "@stackbit/stackbit-pull": "^0.4.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.3.2",
     "@xobotyi/scrollbar-width": "^1.9.5",
