--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "dotenv-flow": "^3.1.0",
     "dotenv-flow-webpack": "^1.0.0",
     "fs-extra": "^7.0.1",
-    "gatsby": "^2.20.23",
-    "gatsby-cli": "^2.11.5",
+    "gatsby": "^2.31.1",
+    "gatsby-cli": "^2.18.0",
     "gatsby-plugin-mdx": "^1.1.11",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.12",
@@ -62,6 +62,7 @@
     "save-dev": "0.0.1-security",
     "sprintf-js": "^1.1.2",
     "stripe": "^8.29.0",
+    "swr": "^0.4.0",
     "us-state-codes": "^1.1.2"
   },
   "devDependencies": {
@@ -71,6 +72,6 @@
     "http-proxy-middleware": "^1.0.4",
     "node-fetch": "^2.6.0",
     "opencorporates": "^3.0.3",
-    "unfetch": "^4.1.0"
+    "unfetch": "^4.2.0"
   }
 }
